--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@prisma/client": "^3.14.0",
     "next": "latest",
+    "next-auth": "^4.3.4",
+    "node-sass": "^7.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
   },
