add mui and design app bar

--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "migrate": "prisma migrate dev"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.8.2",
+    "@mui/material": "^5.8.2",
     "@prisma/client": "^3.14.0",
     "next": "latest",
     "next-auth": "^4.3.4",
