--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "next start",
     "test": "jest --watch",
     "test:ci": "jest --ci",
-    "migrate": "prisma migrate dev"
+    "migrate": "prisma migrate dev",
+    "deploy": "prisma migrate dev ; next  build ; next start"
   },
   "dependencies": {
     "@emotion/react": "^11.9.0",
@@ -25,6 +26,7 @@
     "@testing-library/react": "13.2.0",
     "@testing-library/user-event": "14.2.0",
     "@types/react": "18.0.9",
+    "eslint": "^8.17.0",
     "jest": "28.1.0",
     "jest-environment-jsdom": "28.1.0",
     "prisma": "^3.14.0",
