--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "jest --watch",
     "test:ci": "jest --ci",
     "migrate": "prisma migrate dev",
-    "deploy": "prisma migrate dev ; next  build ; next start"
+    "deploy": "prisma migrate dev ; next build"
   },
   "dependencies": {
     "@emotion/react": "^11.9.0",
